--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Atsushi Shimoda</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <h1>Hello,world!</h1>
-    <h2>Heloo.aaa</h2>
-    
+    <header>
+        <nav>logo</nav>
+    </header>
+
+    <script type="text/javascript" src="<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
