--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>logo</nav>
     </header>
 
-    <script type="text/javascript" src="<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
